# cuda-neural-network

./: .gitignore  README.md
cuda-neural-network/: CMakeLists.txt
cuda-neural-network/src/: collision_detection.cpp  collision_detection.hpp  file_io.cu  file_io.hh  main.cpp  main.cu  neural_network.cu  neural_network.hh  test_utils.cu  test_utils.hh
cuda-neural-network/src/layers/: linear_layer.cu  linear_layer.hh  nn_layer.hh  relu_activation.cu  relu_activation.hh  sigmoid_activation.cu  sigmoid_activation.hh  tanh_activation.cu  tanh_activation.hh
cuda-neural-network/src/nn_utils/: matrix.cu  matrix.hh
